--- a/assignment -2- Javascript/src/style.css
+++ b/assignment -2- Javascript/src/style.css
@@ -9,6 +9,13 @@ h1 {
   color: #131200;
 }
 
+h2 {
+  text-align: center;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #131200;
+}
+
 span {
   display: block;
 }
