--- a/assignment -2- Javascript/src/style.css
+++ b/assignment -2- Javascript/src/style.css
@@ -4,20 +4,34 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 70px;
+  font-size: 60px;
   font-family: Arial, Helvetica, sans-serif;
   color: #131200;
 }
 
 h2 {
   text-align: center;
-  font-size: 18px;
+  font-size: 15px;
+  font-weight: normal;
   font-family: Arial, Helvetica, sans-serif;
   color: #131200;
 }
 
+.selectStrong {
+  font-weight: bolder;
+}
+
 span {
   display: block;
+}
+
+select {
+  display: left;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10px 0;
+  width: 80px;
+  justify-content: space-between;
+  padding: 5px 0;
 }
 
 .container {
@@ -25,7 +39,21 @@ span {
   margin: 60px auto;
   padding: 10px;
   border-radius: 10px;
-  font-family: Arial, Helvetica, sans-serif;
+  display: grid;
+  place-items: center;
+}
+
+select {
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.submitButton {
+  border-radius: 10px;
+}
+
+.addButton {
+  border-radius: 10px;
 }
 
 footer {
